--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -34,8 +34,8 @@ deploy_prod:
     - helm version
     
     # Sanity Checks: print which runner & kube server we're using
-    - echo "Runner: $CI_RUNNER_DESCRIPTION"
-    - echo "Executor: $CI_RUNNER_EXECUTOR"
+    - echo "Runner=$CI_RUNNER_DESCRIPTION"
+    - echo "Executor=$CI_RUNNER_EXECUTOR"
     - echo "Using KUBECONFIG=$KUBECONFIG"
     - kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}'; echo
     - kubectl version
