--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -18,6 +18,8 @@ deploy_prod:
     - export PATH=$BIN_DIR:$PATH
     - set -eou pipefail
     - export KUBECONFIG=$KUBECONFIG_FILE
+    - sudo chmod 600 $KUBECONFIG_FILE
+    - sudo chown gitlab-runner:gitlab-runner $KUBECONFIG_FILE
 
     # Install dependencies
     - sudo apt-get update -y
@@ -40,7 +42,7 @@ deploy_prod:
     # Sanity Checks: print which runner & kube server we're using
     - echo "Runner=$CI_RUNNER_DESCRIPTION"
     - echo "Using KUBECONFIG=$KUBECONFIG"
-    #- kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}'; echo
+    - kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}'; echo
     - kubectl version
     - kubectl get nodes
     - export DB_PASSWORD="$DB_PASSWORD_PROD"
