--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -13,7 +13,7 @@ variables:
 
 deploy_prod:
   stage: deploy
-  tags: [fastapi-runner, runner_ec2_project]
+  tags: [fastapi-runner]
   before_script:
     - export PATH=$BIN_DIR:$PATH
     - set -eou pipefail
