--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -51,17 +51,17 @@ deploy_prod:
     - helm repo add traefik https://traefik.github.io/charts
     - helm repo update
     - |
-      helm upgrade --install traefik traefik/traefik \
+      sudo helm upgrade --install traefik traefik/traefik \
         --set service.type=LoadBalancer
     - |
-      helm upgrade --install $RELEASE_NAME $CHART_DIR \
+      sudo helm upgrade --install $RELEASE_NAME $CHART_DIR \
         --namespace $NAMESPACE \
         --create-namespace \
         -f $CHART_DIR/values.yaml \
         -f $CHART_DIR/values-prod.yaml \
         --set image.tag=$IMAGE_TAG \
         --set-string db.password="$DB_PASSWORD"
-    - kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=120s
+    - sudo kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=120s
     - apk add --no-cache curl || apt-get update && apt-get install -y curl
     - |
       for i in {1..10}; do
