--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -57,9 +57,11 @@ deploy_prod:
     - sudo kubectl get nodes
     - |
       helm upgrade --install traefik traefik/traefik \
+        --kubeconfig $KUBECONFIG \
         --set service.type=LoadBalancer
     - |
       helm upgrade --install $RELEASE_NAME $CHART_DIR \
+        --kubeconfig $KUBECONFIG \
         --namespace $NAMESPACE \
         --create-namespace \
         -f $CHART_DIR/values.yaml \
