--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -56,11 +56,11 @@ deploy_prod:
     - sudo kubectl config view --minify
     - sudo kubectl get nodes
     - |
-      helm upgrade --install traefik traefik/traefik \
+      sudo -E helm upgrade --install traefik traefik/traefik \
         --kubeconfig $KUBECONFIG \
         --set service.type=LoadBalancer
     - |
-      helm upgrade --install $RELEASE_NAME $CHART_DIR \
+      sudo -E helm upgrade --install $RELEASE_NAME $CHART_DIR \
         --kubeconfig $KUBECONFIG \
         --namespace $NAMESPACE \
         --create-namespace \
