--- a/helm/fastapi/values-prod.yaml
+++ b/helm/fastapi/values-prod.yaml
@@ -60,7 +60,7 @@ securityContext: {}
 ingress:
   enabled: true
   className: "traefik"
-  annotations: []
+  annotations: {} #[]
     # traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
@@ -76,10 +76,10 @@ ingress:
 
 web:
  env:
-    - name: ENV
-      value: production
+  - name: ENV
+    value: production
 
-resources: {}
+resources: #{}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
