--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -58,12 +58,12 @@ deploy_prod:
     - sudo -E helm history traefik -n kube-system || echo "No previous traefik release found"
     #- sudo -E uninstall traefik -n kube-system
     - if helm status traefik -n kube-system > /dev/null 2>&1; then 
-        echo "Traefik already installed, skipping...";
-        sudo -E helm upgrade traefik traefik/traefik -n kube-system; 
+        echo "Traefik exists --> upgrading...";
+        sudo -E helm upgrade traefik traefik/traefik -n kube-system --kubeconfig $KUBECONFIG --timeout 10m0s --atomic; 
       else  
         echo "Traefik not installed or broken, reinstalling...";
-        sudo -E helm uninstall traefik -n kube-system || true;
-        sudo -E helm upgrade --install traefik traefik/traefik --kubeconfig $KUBECONFIG --namespace kube-system --create-namespace --set service.type=LoadBalancer;
+        sudo -E helm uninstall traefik -n kube-system --kubeconfig $KUBECONFIG || true;
+        sudo -E helm upgrade --install traefik traefik/traefik --kubeconfig $KUBECONFIG --namespace kube-system --create-namespace --timeout 10m0s --atomic --set service.type=LoadBalancer;
       fi
     - |
       sudo -E helm upgrade --install $RELEASE_NAME $CHART_DIR \
