--- a/helm/fastapi/templates/deployment.yaml
+++ b/helm/fastapi/templates/deployment.yaml
@@ -44,6 +44,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+            - name: containerport
+              containerPort: {{ .Values.service.containerport }}
+              protocol: TCP
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
