--- a/helm/fastapi/values.yaml
+++ b/helm/fastapi/values.yaml
@@ -50,17 +50,19 @@ securityContext: {}
   # runAsUser: 1000
 
 web:
- port: 8000
+ containerport: 8000
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  ports:
-    - name: http
-      port: 80
-      targetPort: 8000
+  # ports:
+  #   - name: http
+  #     port: 80
+  #     targetPort: 8000
+  port: 80
+  targetPort: 8000
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
