--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -9,6 +9,7 @@ variables:
   KUBECONFIG_FILE: /home/gitlab-runner/.kube/config
   BIN_DIR: $CI_PROJECT_DIR/bin
   PATH: $CI_PROJECT_DIR/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+  DB_PASSWORD: $DB_PASSWORD_PROD
 
 
 deploy_prod:
@@ -48,6 +49,7 @@ deploy_prod:
     - sudo kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}'; echo
     - sudo kubectl version
     - sudo kubectl get nodes
+    - echo "Password=$DB_PASSWORD"
     - export DB_PASSWORD="$DB_PASSWORD_PROD"
   script:
     - helm repo add traefik https://traefik.github.io/charts
