--- a/helm/fastapi/templates/ingress.yaml
+++ b/helm/fastapi/templates/ingress.yaml
@@ -37,7 +37,7 @@ spec:
               service:
                 name: {{ include "fastapi.fullname" $ }}
                 port:
-                  number: {{ .Values.service.port }}
+                  number: {{$ .Values.service.port }}
           {{- end }}
     {{- end }}
 {{- end }}
