--- a/helm/fastapi/templates/deployment.yaml
+++ b/helm/fastapi/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
             - name: containerport
-              containerPort: {{ .Values.service.containerport }}
+              containerPort: {{ .Values.service.targetPort }}
               protocol: TCP
           {{- with .Values.livenessProbe }}
           livenessProbe:
