--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -76,7 +76,8 @@ deploy_prod:
         -f $CHART_DIR/values.yaml \
         -f $CHART_DIR/values-prod.yaml \
         --set image.tag=$IMAGE_TAG \
-        --set-string db.password="$DB_PASSWORD"
+        --set-string db.password="$DB_PASSWORD"\
+        --dry-run --debug | grep -A3 "kind: Service"
     - sudo kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE --timeout=120s
     - apk add --no-cache curl || apt-get update && apt-get install -y curl
     - |
