gitlab-runner permissions set

--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -20,6 +20,7 @@ deploy_prod:
     - export PATH=$BIN_DIR:$PATH
     - set -eou pipefail
     - export KUBECONFIG=$KUBECONFIG_FILE
+    - whoami
     #- sudo cat $KUBECONFIG
     - sudo chmod 600 $KUBECONFIG_FILE
     - sudo chown gitlab-runner:gitlab-runner $KUBECONFIG_FILE
