--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -15,8 +15,8 @@ variables:
 deploy_prod:
   stage: deploy
   tags:
-    - runner_fastapi_project
-    #- runner_fastapi_project_second
+    #- runner_fastapi_project
+    - runner_fastapi_project_second
   before_script:
     - whoami
     - export PATH=$BIN_DIR:$PATH
