--- a/helm/fastapi/templates/db-statefulset.yaml
+++ b/helm/fastapi/templates/db-statefulset.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: {{ .Values.db.image }}
+          image: {{ .Values.db.image.repository }}:{{ .Values.db.image.tag }}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: {{ .Values.db.port }}
