--- a/helm/fastapi/values-dev.yaml
+++ b/helm/fastapi/values-dev.yaml
@@ -1,5 +1,11 @@
 replicaCount: 1
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+image:
+  repository: sarialbebeto/fastapi-dev
+  # This sets the pull policy for images.
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "latest"
 imagePullSecrets: []
 # This is to override the chart name.
 nameOverride: ""
