--- a/helm/fastapi/values-prod.yaml
+++ b/helm/fastapi/values-prod.yaml
@@ -2,12 +2,12 @@
 replicaCount: 3
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
-# image:
-#   repository: nginx
-#   # This sets the pull policy for images.
-#   pullPolicy: IfNotPresent
-#   # Overrides the image tag whose default is the chart appVersion.
-#   tag: "latest"
+image:
+  repository: sarialbebeto/fastapi-prod
+  # This sets the pull policy for images.
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "latest"
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
