--- a/.gitlab-ci-aws-prod.yml
+++ b/.gitlab-ci-aws-prod.yml
@@ -14,7 +14,7 @@ deploy_prod:
   stage: deploy
   image: alpine:3.19
   before_script:
-    - apk add --no-cache curl unzip bash ca-certificates
+    - apk add --no-cache curl unzip bash ca-certificates openssl
     - curl -sSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
     - unzip -q awscliv2.zip && ./aws/install
     - curl -sSL -o /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/$(curl -sSL https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x /usr/local/bin/kubectl
