--- a/helm-aws/fastapi/values-prod.yaml
+++ b/helm-aws/fastapi/values-prod.yaml
@@ -1,21 +1,16 @@
-# Default values for fastapi.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 2
+replicaCount: 3
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: nginx
+  repository: sarialbebeto/fastapi-prod
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-imagePullSecrets: 
-   - name: gitlab-regcred
+imagePullSecrets: []
 # This is to override the chart name.
 nameOverride: ""
 fullnameOverride: ""
@@ -50,18 +45,12 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-web:
- containerport: 8000
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  # ports:
-  #   - name: http
-  #     port: 80
-  #     targetPort: 8000
   port: 80
   targetPort: 8000
 
@@ -69,56 +58,47 @@ service:
 ingress:
   enabled: true
   className: "traefik"
-  annotations: 
-    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+  annotations: {} 
+    # traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: api.example.com
       paths:
         - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+          pathType: Prefix
+  tls: # []
+    - secretName: prod-tls
+      hosts:
+        - api.example.com
 
-db:
-  image: 
-   repository: postgres
-   tag: "latest"
-   pullPolicy: IfNotPresent
-  port: 5432
-  user: fastapi_traefik
-  database: fastapi_traefik
-  password: ""
-  storage:
-    size: 5Gi
-    storageClassName: ""
+web:
+  env:
+    - name: ENV
+      value: production
 
-resources: {}
+resources: #{}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  limits:
+    cpu: 500m
+    memory: 512Mi
+  requests:
+    cpu: 200m
+    memory: 256Mi
+
 
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
   httpGet:
     path: /
-    # port: http
-    port: 8000
+    port: http
 readinessProbe:
   httpGet:
     path: /
-    # port: http
-    port: 8000
+    port: http
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
