--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
  - update
  - build
  - test
+ - deploy_with_docker
  - deploy
  - deploy_aws
 
@@ -80,7 +81,7 @@ smoke-test:
   when: manual # just for testing purposes
 
 docker_pipeline:
-  stage: deploy
+  stage: deploy_with_docker
   trigger:
     include: .gitlab-ci-docker.yml
     strategy: depend
@@ -103,7 +104,7 @@ k8s_pipeline_prod:
     include: 
       - local: .gitlab-ci-k8s-prod.yml
     strategy: depend
-  # when: manual
+  when: manual
 
 deploy_dev_aws:
   stage: deploy_aws
@@ -113,8 +114,6 @@ deploy_dev_aws:
     include:
       - local: .gitlab-ci-aws-dev.yml
     strategy: depend
-  #when: manual 
-  
 
 deploy_prod_aws:
   stage: deploy_aws
