Docker image for the CLI changed

--- a/.gitlab-ci-aws-prod.yml
+++ b/.gitlab-ci-aws-prod.yml
@@ -14,7 +14,7 @@ variables:
 
 deploy_prod:
   stage: deploy
-  image: alpine:3.19
+  image: amazon/aws-cli
   before_script:
     - apk add --no-cache curl unzip bash ca-certificates openssl
     - curl -sSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
