--- a/.gitlab-ci-aws-prod.yml
+++ b/.gitlab-ci-aws-prod.yml
@@ -17,10 +17,10 @@ deploy_prod:
   image: amazon/aws-cli
   before_script:
     - apk add --no-cache curl unzip bash ca-certificates openssl
-    - curl -sSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-    - unzip -q awscliv2.zip 
+    #- curl -sSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+    #- unzip -q awscliv2.zip 
     # - ls -a
-    - ./aws/install
+    #- ./aws/install
     - /usr/local/bin/aws --version
     - curl -sSL -o /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/$(curl -sSL https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x /usr/local/bin/kubectl
     - curl -sSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
