new image for the production state created

--- a/.gitlab-ci-aws-prod.yml
+++ b/.gitlab-ci-aws-prod.yml
@@ -1,4 +1,5 @@
 stages:
+ - build
  - deploy
 
 variables:
@@ -12,16 +13,26 @@ variables:
   GITLAB_USER: $CI_COMMIT_AUTHOR
   GITLAB_PASSWORD: $PAT_GITLAB
 
+build:
+  stage: build
+  image: docker:latest
+  services:
+    - docker:dind
+  script:
+    - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USER" --password-stdin 
+    - docker build -t "$DOCKER_REGISTRY_USER/fastapi-aws:$IMAGE_TAG" -f Dockerfile.aws .
+    - docker push "$DOCKER_REGISTRY_USER/fastapi-aws:$IMAGE_TAG"
+
 deploy_prod:
   stage: deploy
-  image: amazon/aws-cli
+  image: fastapi-aws:$IMAGE_TAG
   before_script:
-    - apk add --no-cache curl unzip bash ca-certificates openssl
+    #- apk add --no-cache curl unzip bash ca-certificates openssl
     #- curl -sSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
     #- unzip -q awscliv2.zip 
-    # - ls -a
+    #- ls -a
     #- ./aws/install
-    - /usr/local/bin/aws --version
+    - aws --version
     - curl -sSL -o /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/$(curl -sSL https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x /usr/local/bin/kubectl
     - curl -sSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
     - helm version
