packages conflict in the Dockerfile fixed

--- a/Dockerfile.aws
+++ b/Dockerfile.aws
@@ -2,4 +2,4 @@ FROM amazon/aws-cli
 
 RUN yum install -y openssl
 
-RUN yum install -y curl unzip bash ca-certificates 
+RUN yum install -y curl unzip bash ca-certificates --allowerasing
