--- a/.gitlab-ci-aws-prod.yml
+++ b/.gitlab-ci-aws-prod.yml
@@ -19,21 +19,14 @@ build:
   services:
     - docker:dind
   script:
-    - echo "User:" $DOCKER_REGISTRY_USER
-    - echo "Pass:" $DOCKER_REGISTRY_PASSWORD
     - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USER" --password-stdin 
     - docker build -t "$DOCKER_REGISTRY_USER/fastapi-aws:$IMAGE_TAG" -f Dockerfile.aws .
     - docker push "$DOCKER_REGISTRY_USER/fastapi-aws:$IMAGE_TAG"
 
 deploy_prod:
   stage: deploy
-  image: fastapi-aws:$IMAGE_TAG
+  image: $DOCKER_REGISTRY_USER/fastapi-aws:$IMAGE_TAG
   before_script:
-    #- apk add --no-cache curl unzip bash ca-certificates openssl
-    #- curl -sSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-    #- unzip -q awscliv2.zip 
-    #- ls -a
-    #- ./aws/install
     - aws --version
     - curl -sSL -o /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/$(curl -sSL https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x /usr/local/bin/kubectl
     - curl -sSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
