error on aws cmd removed

--- a/.gitlab-ci-aws-prod.yml
+++ b/.gitlab-ci-aws-prod.yml
@@ -27,7 +27,7 @@ deploy_prod:
   stage: deploy
   image: $DOCKER_REGISTRY_USER/fastapi-aws:$IMAGE_TAG
   before_script:
-    - aws --version
+    #- aws --version
     - curl -sSL -o /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/$(curl -sSL https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x /usr/local/bin/kubectl
     - curl -sSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
     - helm version
